--- a/securitytxt_generator.html
+++ b/securitytxt_generator.html
@@ -59,21 +59,124 @@
       visibility: visible;
       opacity: 1;
     }
+
+  .required-label {
+    color: red;
+    font-size: 0.8em;
+    margin-left: 0.5em;
+    font-weight: normal;
+  }
+
+  .error-message {
+    color: red;
+    font-size: 0.85em;
+    margin-top: 0.2em;
+    display: none;
+  }
+  input.invalid {
+    border-color: red;
+  }
+
+  .canonical-row {
+    display: flex;
+    gap: 0.5em;
+    align-items: center;
+    margin-bottom: 0.5em;
+  }
+
+  .canonical-row input {
+    flex: 1;
+    padding: 0.5em;
+    font-size: 1em;
+    box-sizing: border-box;
+  }
+
+  .canonical-row button {
+    flex: 0 0 auto;
+    background: none;
+    border: none;
+    color: #c00;
+    font-size: 1.2em;
+    cursor: pointer;
+    padding: 0.3em;
+  }
+
+  .btn-remove-canonical {
+    width: auto; /* natural width */
+    flex: 0 0 auto;
+    padding: 0.3em 0.6em;
+    font-size: 1.2em;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: #c00;
+    line-height: 1;
+  }
+
+  #canonicalContainer {
+    width: 100%;
+  }
+
   </style>
 
   <script>
+  const APP_VERSION = 'v 1.1';
+  document.addEventListener('DOMContentLoaded', () => {
+    const splash = document.getElementById('splashModal');
+    const footer = document.getElementById('appFooter');
+    const splashcontent = `<p>security.txt generator</p><p>For sourcecode see <a href="https://github.com/gitaware/securitytxtgenerator">github</a></p><p>${APP_VERSION} (c)2025 <a href="https://cloudaware.eu">CloudAware.eu</a></p>`;
+    const footercontent = `${APP_VERSION} (c)2025 <a href="https://cloudaware.eu">CloudAware.eu</a>`;
+
+    splash.innerHTML = splashcontent;
+    footer.innerHTML = footercontent.replace('white', '#666'); // Use darker color for footer link
+
+    splash.addEventListener('click', () => {
+      splash.style.display = 'none';
+    });
+
+    addCanonicalField();
+  });
+
   function generateSecurityTxt() {
-    const contact = document.getElementById('contact').value;
+    const contact = document.getElementById('contact').value.trim();
     const expiresInput = document.getElementById('expires').value;
     const langs = Array.from(document.getElementById('languages').selectedOptions)
                        .map(opt => opt.value).join(',');
 
-    const expires = expiresInput ? new Date(expiresInput).toISOString().replace(/\.\d+Z$/, 'Z') : '';
+    const canonicals = Array.from(document.querySelectorAll('#canonicalContainer input'))
+                            .map(input => input.value.trim())
+                            .filter(val => val !== '');
+
+    // Validation
+    const errors = [];
+    if (!contact) errors.push("Contact is required.");
+    if (!expiresInput) errors.push("Expires is required.");
+
+    canonicals.forEach((url, index) => {
+      try {
+        const u = new URL(url);
+        if (!u.href.endsWith('security.txt')) {
+          errors.push(`Canonical URL ${index + 1} must end with "security.txt"`);
+        }
+      } catch {
+        errors.push(`Canonical URL ${index + 1} is not a valid URL.`);
+      }
+    });
+
+    if (errors.length > 0) {
+      alert(errors.join('\n'));
+      return;
+    }
+
+    const expires = new Date(expiresInput).toISOString().replace(/\.\d+Z$/, 'Z');
 
     let txt = '';
     if (contact) txt += `Contact: ${contact}\n`;
     if (expires) txt += `Expires: ${expires}\n`;
     if (langs) txt += `Preferred-Languages: ${langs}\n`;
+    canonicals.forEach(url => {
+      txt += `Canonical: ${url}\n`;
+    });
 
     document.getElementById('securityOutput').value = txt;
   }
@@ -129,6 +232,7 @@
 
     document.getElementById('privateKey').value = privateKey;
     alert("PGP Key generated. You can now sign your security.txt!");
+    generatePassphrase();
   }
 
   async function downloadPrivateKey() {
@@ -212,6 +316,53 @@
     }
   }
 
+  function downloadSignedFile() {
+    const signed = document.getElementById('signedOutput').value;
+    const blob = new Blob([signed], { type: 'text/plain' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'security.txt';
+    a.click();
+    URL.revokeObjectURL(url);
+  }
+
+  function addCanonicalField(value = '') {
+    const container = document.getElementById('canonicalContainer');
+    const row = document.createElement('div');
+    row.className = 'canonical-row';
+
+    const input = document.createElement('input');
+    input.type = 'url';
+    input.placeholder = 'https://example.com/.well-known/security.txt';
+    input.value = value;
+
+    const removeBtn = document.createElement('button');
+    removeBtn.type = 'button';
+    removeBtn.innerHTML = '🗑️';
+    removeBtn.title = 'Remove';
+    removeBtn.className = 'btn-remove-canonical';
+    removeBtn.onclick = () => {
+      if (container.children.length > 1) {
+        container.removeChild(row);
+        toggleTrashVisibility();
+      }
+    };
+
+    row.appendChild(input);
+    row.appendChild(removeBtn);
+    container.appendChild(row);
+    toggleTrashVisibility();
+  }
+
+  function toggleTrashVisibility() {
+    const rows = document.querySelectorAll('#canonicalContainer .canonical-row');
+    rows.forEach((row, index) => {
+      const btn = row.querySelector('button');
+      btn.style.visibility = rows.length > 1 ? 'visible' : 'hidden';
+    });
+  }
+
   document.getElementById('keyFile').addEventListener('change', async (e) => {
     const file = e.target.files[0];
     if (!file) return;
@@ -221,18 +372,33 @@
   </script>
 </head>
 <body>
+<div id="splashModal" style="
+  position: fixed;
+  top: 0; left: 0; width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5em;
+  z-index: 10000;
+  text-align: center;
+  padding: 2em;
+  cursor: pointer;
+"></div>
 
 <h2>security.txt Generator + PGP Signing</h2>
 
 <form id="secForm">
-  <label>Contact</label>
-  <input type="text" id="contact" placeholder="mailto:security@example.com" />
+  <label>Contact <span class="required-label">required</span></label>
+  <input type="text" id="contact" required placeholder="mailto:security@example.com" />
+  <div id="contactError" class="error-message">Contact is required.</div>
 
-  <label>Expires</label>
-  <input type="datetime-local" id="expires" />
+  <label>Expires <span class="required-label">required</span></label>
+  <input type="datetime-local" required id="expires" />
+  <div id="expiresError" class="error-message">Expires date is required.</div>
   <div class="buttons">
     <button type="button" onclick="setFutureDate(1)">+1 Year</button>
-    <button type="button" onclick="setFutureDate(2)">+2 Years</button>
   </div>
 
   <label>Preferred-Languages</label>
@@ -243,6 +409,10 @@
     <option value="de">de</option>
     <option value="pt">pt</option>
   </select>
+
+  <label>Canonical <small style="color: red;">(optional, must end in <code>security.txt</code>)</small></label>
+  <div id="canonicalContainer"></div>
+  <button type="button" onclick="addCanonicalField()">➕ Add Canonical</button>
 
   <button type="button" onclick="generateSecurityTxt()">📝 Generate security.txt</button>
   <label>security.txt Output</label>
@@ -257,7 +427,7 @@
   <label>PGP Private Key (ASCII)</label>
   <textarea id="privateKey" placeholder="-----BEGIN PGP PRIVATE KEY-----"></textarea>
 
-  <label>Passphrase (if required)</label>
+  <label>Passphrase (do not loose!)</label>
   <div class="password-wrapper">
     <input type="password" id="passphrase" />
     <span class="toggle-visibility" onclick="togglePassphrase()" title="Show/Hide">
@@ -265,17 +435,19 @@
     </span>
   </div>
   <button type="button" onclick="copyPassphrase()">📋 Copy Passphrase to Clipboard</button>
-  <button type="button" onclick="generatePassphrase()">🔑 Generate Passphrase</button>
+  <!--<button type="button" onclick="generatePassphrase()">🔑 Generate Passphrase</button> //-->
 
   <button type="button" onclick="downloadPrivateKey()">💾 Download Private Key</button>
   <button type="button" onclick="signSecurityTxt()">✍️ Sign with PGP</button>
 
   <label>PGP-Signed security.txt</label>
   <textarea id="signedOutput" readonly></textarea>
+  <button type="button" onclick="downloadSignedFile()">📄 Download Signed File</button>
 </form>
 
 
 <div id="toast">Passphrase copied to clipboard!</div>
+<footer id="appFooter" style="text-align: center; margin-top: 3em; font-size: 0.9em; color: #666;"></footer>
 </body>
 </html>
 
