Added validation and public key export

--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
   <button type="button" id="copyPassphrase">📋 Copy Passphrase to Clipboard</button>
   <!--<button type="button" onclick="generatePassphrase()">🔑 Generate Passphrase</button> //-->
 
-  <button type="button" id="downloadPrivateKey">💾 Download Private Key</button>
   <button type="button" id="signSecurityTxt">✍️ Sign with PGP</button>
 
   <label>PGP-Signed security.txt</label>
   <textarea id="signedOutput" readonly></textarea>
   <button type="button" id="downloadSignedFile">📄 Download Signed File</button>
+  <button type="button" id="downloadPrivateKey">💾 Download Key Files</button>
 </form>
 
 
